force-app/main/default/objects/Account/fields/AssosiationTerritories__c.field-meta.xml
<CustomField>
    <fullName>AssosiationTerritories__c</fullName>
    <label>Associação de Territórios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>