force-app/main/default/objects/Account/fields/BpType__c.field-meta.xml
<CustomField>
    <fullName>BpType__c</fullName>
    <label>Tipo de BP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietário</fullName>
                <label>Cliente</label>
            </value>
            <value>
                <fullName>Propriedade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>