force-app/main/default/objects/Account/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Razão Social</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>