force-app/main/default/objects/Account/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <label>Complemento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>