force-app/main/default/objects/Account/fields/ContagemVisita__c.field-meta.xml
<CustomField>
    <fullName>ContagemVisita__c</fullName>
    <label>ContagemVisita</label>
    <summaryFilterItems>
        <field>Cadastro_ClientedaVisita__c.Status_da_Visita__c</field>
        <operation>equals</operation>
        <value>Planejada, Em andamento</value>
    </summaryFilterItems>
    <summaryForeignKey>Cadastro_ClientedaVisita__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>