force-app/main/default/objects/Account/fields/LastVisit_Date__c.field-meta.xml
<CustomField>
    <fullName>LastVisit_Date__c</fullName>
    <label>Data da Última Visita</label>
    <summarizedField>VisitPlanning__c.InitialDate__c</summarizedField>
    <summaryFilterItems>
        <field>VisitPlanning__c.Status__c</field>
        <operation>equals</operation>
        <value>Concluído</value>
    </summaryFilterItems>
    <summaryForeignKey>VisitPlanning__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>