force-app/main/default/objects/Account/fields/MunicipalRegistration__c.field-meta.xml
<CustomField>
    <fullName>MunicipalRegistration__c</fullName>
    <label>Inscrição Municipal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>