force-app/main/default/objects/Account/fields/NCD__c.field-meta.xml
<CustomField>
    <fullName>NCD__c</fullName>
    <label>Certidão Negativa de Débitos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>