force-app/main/default/objects/Account/fields/NumberTerritorys__c.field-meta.xml
<CustomField>
    <fullName>NumberTerritorys__c</fullName>
    <label>Número de Territórios</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>