force-app/main/default/objects/Account/fields/RegisterTipe__c.field-meta.xml
<CustomField>
    <fullName>RegisterTipe__c</fullName>
    <label>Tipo de Registro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLCU01</fullName>
            </value>
            <value>
                <fullName>UKM000</fullName>
            </value>
            <value>
                <fullName>TR0604</fullName>
            </value>
            <value>
                <fullName>BPSITE</fullName>
            </value>
            <value>
                <fullName>FLVN00</fullName>
            </value>
            <value>
                <fullName>FLCU00</fullName>
            </value>
            <value>
                <fullName>FLVN01</fullName>
            </value>
            <value>
                <fullName>FLCU01/FLVN01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>