force-app/main/default/objects/Account/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <length>60</length>
    <type>Text</type>
</CustomField>