force-app/main/default/objects/Account/fields/StateRegistration__c.field-meta.xml
<CustomField>
    <fullName>StateRegistration__c</fullName>
    <label>Inscrição Estadual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>