force-app/main/default/objects/Account/fields/StorageBp__c.field-meta.xml
<CustomField>
    <fullName>StorageBp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Armazenagem</label>
    <type>Checkbox</type>
</CustomField>