force-app/main/default/objects/Account/recordTypes/Propriedade.recordType-meta.xml
<RecordType>
    <fullName>Propriedade</fullName>
    <active>true</active>
    <label>Propriedade</label>
    <picklistValues>
        <picklist>Industry</picklist>
        <values>
            <fullName>Agriculture</fullName>
        </values>
        <values>
            <fullName>Apparel</fullName>
        </values>
        <values>
            <fullName>Banking</fullName>
        </values>
        <values>
            <fullName>Biotechnology</fullName>
        </values>
        <values>
            <fullName>Chemicals</fullName>
        </values>
        <values>
            <fullName>Communications</fullName>
        </values>
        <values>
            <fullName>Construction</fullName>
        </values>
        <values>
            <fullName>Consulting</fullName>
        </values>
        <values>
            <fullName>Education</fullName>
        </values>
        <values>
            <fullName>Electronics</fullName>
        </values>
        <values>
            <fullName>Energy</fullName>
        </values>
        <values>
            <fullName>Engineering</fullName>
        </values>
        <values>
            <fullName>Entertainment</fullName>
        </values>
        <values>
            <fullName>Environmental</fullName>
        </values>
        <values>
            <fullName>Finance</fullName>
        </values>
        <values>
            <fullName>Food %26 Beverage</fullName>
        </values>
        <values>
            <fullName>Government</fullName>
        </values>
        <values>
            <fullName>Healthcare</fullName>
        </values>
        <values>
            <fullName>Hospitality</fullName>
        </values>
        <values>
            <fullName>Insurance</fullName>
        </values>
        <values>
            <fullName>Machinery</fullName>
        </values>
        <values>
            <fullName>Manufacturing</fullName>
        </values>
        <values>
            <fullName>Media</fullName>
        </values>
        <values>
            <fullName>Not For Profit</fullName>
        </values>
        <values>
            <fullName>Other</fullName>
        </values>
        <values>
            <fullName>Recreation</fullName>
        </values>
        <values>
            <fullName>Retail</fullName>
        </values>
        <values>
            <fullName>Shipping</fullName>
        </values>
        <values>
            <fullName>Technology</fullName>
        </values>
        <values>
            <fullName>Telecommunications</fullName>
        </values>
        <values>
            <fullName>Transportation</fullName>
        </values>
        <values>
            <fullName>Utilities</fullName>
        </values>
    </picklistValues>
    <picklistValues>
        <picklist>Type</picklist>
        <values>
            <fullName>Analyst</fullName>
        </values>
        <values>
            <fullName>Competitor</fullName>
        </values>
        <values>
            <fullName>Customer</fullName>
        </values>
        <values>
            <fullName>Integrator</fullName>
        </values>
        <values>
            <fullName>Investor</fullName>
        </values>
        <values>
            <fullName>Other</fullName>
        </values>
        <values>
            <fullName>Partner</fullName>
        </values>
        <values>
            <fullName>Press</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Reseller</fullName>
        </values>
    </picklistValues>
</RecordType>