force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>CNPJ__c</columns>
    <columns>CPF__c</columns>
    <columns>StateRegistration__c</columns>
    <columns>MunicipalRegistration__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as Contas</label>
</ListView>