force-app/main/default/objects/Account/listViews/Clientes.listView-meta.xml
<ListView>
    <fullName>Clientes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CNPJ__c</columns>
    <columns>CPF__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Clientes</label>
</ListView>