force-app/main/default/objects/Account/listViews/Propriedades.listView-meta.xml
<ListView>
    <fullName>Propriedades</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CNPJ__c</columns>
    <columns>CPF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Propriedades</label>
</ListView>